[gd_scene load_steps=15 format=3 uid="uid://cydr4afr1m1ol"]

[ext_resource type="Script" path="res://scenes/Player/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bdvcgitmqjqim" path="res://gfx/sprites/flame.png" id="3"]
[ext_resource type="Texture2D" uid="uid://4202ixx3gd5n" path="res://gfx/sprites/flame_inner.png" id="4"]
[ext_resource type="AudioStream" uid="uid://dgm6nfcab8nht" path="res://sfx/player/rocket_on.ogg" id="5"]
[ext_resource type="AudioStream" uid="uid://b4nuo354bveb3" path="res://sfx/player/qubodup-BangShort.ogg" id="6"]
[ext_resource type="Texture2D" uid="uid://dou8j4se18qhv" path="res://gfx/lights/601px.png" id="7"]
[ext_resource type="AudioStream" uid="uid://cl7v6g68lohnh" path="res://sfx/interface/light_switch.wav" id="7_302pn"]
[ext_resource type="Texture2D" uid="uid://ddyytgfu8jk2x" path="res://gfx/lights/600_440_headlight.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bdtth1wgvkd5c" path="res://gfx/lights/flame_light.png" id="9"]
[ext_resource type="AudioStream" uid="uid://5tv0bighjrng" path="res://sfx/player/electric_contact.wav" id="10"]
[ext_resource type="Texture2D" uid="uid://cif3jdeg2fli2" path="res://gfx/sprites/player_damage.png" id="11"]

[sub_resource type="Curve" id="1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.163636), -1.28904, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="2"]
curve = SubResource("1")

[sub_resource type="ParticleProcessMaterial" id="3"]
direction = Vector3(0, 1, 0)
spread = 5.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 70.0
initial_velocity_max = 70.0
scale_curve = SubResource("2")
attractor_interaction_enabled = false

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("2")

[node name="LeftWing" type="RayCast2D" parent="."]
position = Vector2(-22, 24)
target_position = Vector2(0, 5)
hit_from_inside = true
collide_with_areas = true

[node name="RightWing" type="RayCast2D" parent="."]
position = Vector2(22, 24)
target_position = Vector2(0, 5)
hit_from_inside = true
collide_with_areas = true

[node name="Flame" type="Node2D" parent="."]
position = Vector2(0, 17)

[node name="OuterParticle" type="GPUParticles2D" parent="Flame"]
amount = 12
process_material = SubResource("3")
texture = ExtResource("3")
lifetime = 0.2
local_coords = true

[node name="InnerParticle" type="GPUParticles2D" parent="Flame"]
amount = 12
process_material = SubResource("3")
texture = ExtResource("4")
lifetime = 0.15
local_coords = true

[node name="Image" type="Sprite2D" parent="."]
texture = ExtResource("11")
hframes = 7

[node name="Collision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-24, 20, -1, -24, 1, -24, 24, 20, 24, 24, 16, 24, 1, 15, -1, 15, -16, 24, -24, 24)

[node name="RocketSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
pitch_scale = 0.7

[node name="CollisionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[node name="LightSwitch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_302pn")

[node name="ElectricCollision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10")
volume_db = 5.0

[node name="LCNormal" type="PointLight2D" parent="."]
visible = false
shadow_color = Color(0, 0, 0, 0.498039)
texture = ExtResource("7")

[node name="LHNormal" type="PointLight2D" parent="."]
visible = false
shadow_color = Color(0, 0, 0, 0.498039)
texture = ExtResource("8")
offset = Vector2(0, -180)

[node name="FlameLight" type="PointLight2D" parent="."]
visible = false
texture = ExtResource("9")
offset = Vector2(0, 32)

[node name="LaserStart" type="Node2D" parent="."]
position = Vector2(0, -14)
